--- a/src/ThunderManager.Core/ThunderManager.Core.csproj
+++ b/src/ThunderManager.Core/ThunderManager.Core.csproj
@@ -4,4 +4,8 @@
         <TargetFramework>net472</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Flurl.Http" Version="2.4.2" />
+    </ItemGroup>
+
 </Project>
